fix: remove depreciated controllers and routes
